Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -242,7 +242,6 @@ a:focus {
 .global-wrapper {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
@@ -285,10 +284,6 @@ a:focus {
   font-size: var(--fontSize-2);
 }
 
-.blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
-}
-
 .blog-post header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
@@ -298,9 +293,6 @@ a:focus {
   margin: var(--spacing-0);
 }
 
-.gatsby-highlight {
-  margin-bottom: var(--spacing-8);
-}
 
 /* Media queries */
 
